# EnigmaNG-ESPHome

./: .gitignore  .gitmodules  README.md
components/enigmang/: CMakeLists.txt  __init__.py  binary_sensor.py  enigmang.cpp  enigmang.h  enigmang_connected_sensor.h  enigmang_rssi_sensor.h  manifest.json  sensor.py
components/network/: __init__.py  util.cpp  util.h
example/: node-basic.yaml  node-battery.yaml  node-hostname.yaml  node-ota.yaml
openspec/changes/enigmang-esphome-component/: design.md  proposal.md  tasks.md
openspec/changes/enigmang-esphome-component/specs/enigmang-network/: spec.md
